# dune

./: .gitignore  AStar.cpp  AStar.h  AStarNode.cpp  CMakeLists.txt  Dunes.cpp  Generador_Mapa.ods  Map.cpp  Map.h  Position.cpp  Position.h  Positionable.cpp  Positionable.h  Precipice.cpp  README.md  Rocks.cpp  Sand.cpp  Sand.h  Summit.h  Terrain.cpp  Terrain.h  Unity.cpp  Unity.h  config.yaml  gameConfig.yaml  main.cpp  mapa1.yaml  mapa2.yaml  mapa3.yaml  mapa4.yaml
map maker/: CMakeLists.txt  mapa1.yaml
map maker/src/: main.cpp
src/: AStar.cpp  AStar.h  AStarNode.cpp  AStarNode.h  Application.cpp  Application.h  Area.cpp  Area.h  AssaultRifle.cpp  AssaultRifle.h  Attackable.cpp  Attackable.h  Attacker.cpp  Attacker.h  Building.cpp  Building.h  Config.cpp  Config.h  CustomException.cpp  CustomException.h  GameInterface.cpp  GameInterface.h  GlobalConfig.h  Infantry.cpp  Infantry.h  Map.cpp  Map.h  Model.cpp  Model.h  Orientacion.cpp  Orientacion.h  Player.cpp  Player.h  Position.cpp  Position.h  Positionable.cpp  Positionable.h  Precipice.h  SdlException.cpp  SdlTexture.cpp  (+44 more)
src/Buildings/: Barracks.cpp  Building.cpp  Building.h  ConstructionYard.cpp  HeavyFactory.cpp  LightFactory.cpp  LightFactory.h  SpiceRefinery.cpp  SpiceRefinery.h  SpiceSilo.cpp  SpiceSilo.h  WindTrap.cpp  barracks.cpp  heavy-factory.h  spice-refinery.cpp  spice-refinery.h  wind-trap.cpp
src/Client/: Application.cpp  Application.h  Client.cpp  Client.h  ClientReceiver.cpp  ClientReceiver.h  ClientSender.cpp  ClientSender.h  DefeatedScreen.cpp  DefeatedScreen.h  GameInterface.cpp  GameInterface.h  HandlerThread.cpp  HandlerThread.h  HouseSelection.cpp  HouseSelection.h  MainMenu.cpp  MainMenu.h  Position.cpp  Position.h  Selection.cpp  Selection.h  Selector.cpp  Selector.h  VictoryScreen.cpp  VictoryScreen.h  VictoryScreenHandler.h  VictoryScreenView.cpp  VictoryScreenView.h  WindowMenu.cpp  WindowMenu.h  main.cpp
src/Client/Controller/: BuildingConstructor.cpp  BuildingConstructor.h  ButtonBusy.cpp  ButtonBusy.h  ButtonDisabled.cpp  ButtonDisabled.h  ButtonEnabled.cpp  ButtonEnabled.h  ButtonHandler.cpp  ButtonHandler.h  ButtonHandlerBarracks.cpp  ButtonHandlerBarracks.h  ButtonHandlerHarvester.cpp  ButtonHandlerHarvester.h  ButtonHandlerHeavyFactory.cpp  ButtonHandlerHeavyFactory.h  ButtonHandlerHeavyInfantry.cpp  ButtonHandlerHeavyInfantry.h  ButtonHandlerLightFactory.cpp  ButtonHandlerLightFactory.h  ButtonHandlerLightInfantry.cpp  ButtonHandlerLightInfantry.h  ButtonHandlerRaider.cpp  ButtonHandlerRaider.h  ButtonReady.h  (+28 more)
src/Common/: Area.cpp  Area.h  ClientReceiver.cpp  ClientReceiver.h  ClientSender.cpp  ClientSender.h  Codes.h  CommunicationQueue.cpp  CommunicationQueue.h  CustomException.cpp  CustomException.h  Path.cpp  Path.h  Socket.cpp  Socket.h  Thread.cpp  Thread.h
src/Controller/: BuildingConstructor.cpp  BuildingConstructor.h  ButtonBusy.cpp  ButtonBusy.h  ButtonDisable.cpp  ButtonDisable.h  ButtonDisabled.cpp  ButtonDisabled.h  ButtonEnable.cpp  ButtonEnable.h  ButtonEnabled.cpp  ButtonEnabled.h  ButtonHandler.cpp  ButtonHandler.h  ButtonHandlerBarracks.cpp  ButtonHandlerBarracks.h  ButtonHandlerHarvester.cpp  ButtonHandlerHarvester.h  ButtonHandlerHeavyFactory.cpp  ButtonHandlerHeavyFactory.h  ButtonHandlerHeavyInfantry.cpp  ButtonHandlerHeavyInfantry.h  ButtonHandlerLightFactory.cpp  ButtonHandlerLightFactory.h  ButtonHandlerLightInfantry.cpp  ButtonHandlerLightInfantry.h  ButtonHandlerRaider.cpp  ButtonHandlerRaider.h  ButtonHandlerSellBuilding.cpp  ButtonHandlerSellBuilding.h  ButtonHandlerSpiceRefinery.cpp  ButtonHandlerSpiceRefinery.h  ButtonHandlerSpiceSilo.cpp  ButtonHandlerSpiceSilo.h  ButtonHandlerTank.cpp  ButtonHandlerTank.h  ButtonHandlerTrike.cpp  ButtonHandlerTrike.h  ButtonHandlerWindTrap.cpp  ButtonHandlerWindTrap.h  (+13 more)
src/Model/: AStar.cpp  AStar.h  AStarNode.cpp  AStarNode.h  Attackable.cpp  Attackable.h  Attacker.cpp  Attacker.h  Config.cpp  Config.h  GlobalConfig.h  Map.cpp  Map.h  Model.cpp  Model.h  Player.cpp  Player.h  PlayerBuildingCenter.cpp  PlayerBuildingCenter.h  PlayerTrainingCenter.cpp  PlayerTrainingCenter.h  Positionable.cpp  Positionable.h
src/Server/: AcceptedPlayer.cpp  AcceptedPlayer.h  ConfigurationReader.cpp  ConfigurationReader.h  ExitThread.cpp  ExitThread.h  GameInterface.cpp  GameInterface.h  MapReader.cpp  MapReader.h  Selection.h  Selector.cpp  Server.cpp  Server.h  YAMLReader.cpp  YAMLReader.h  main.cpp
src/Terrains/: Dunes.h  Precipice.cpp  Precipice.h  Rocks.cpp  Rocks.h  Sand.cpp  Sand.h  Terrain.cpp  Terrain.h
src/Unit/: Harvester.cpp  Harvester.h  HeavyInfantry.cpp  HeavyInfantry.h  LightInfantry.cpp  LightInfantry.h  OffensiveUnit.cpp  OffensiveUnit.h  PassiveUnit.cpp  PassiveUnit.h  Raider.cpp  Raider.h  Tank.cpp  Tank.h  Trike.cpp  Trike.h  Unit.cpp  Unit.h  harvester.cpp  harvester.h  heavy-infantry.cpp  heavy-infantry.h  light-infantry.cpp  light-infantry.h  raider.cpp  raider.h  tank.cpp  tank.h  trike.cpp  trike.h
src/View/: Area.cpp  Area.h  BarracksView.cpp  BarracksView.h  BuildingConstructorView.cpp  BuildingConstructorView.h  BuildingView.cpp  BuildingView.h  BuildingViewFactory.cpp  BuildingViewFactory.h  Button.cpp  Button.h  ButtonHandler.cpp  ButtonHandler.h  ButtonHandlerHarvester.cpp  ButtonHandlerHarvester.h  ButtonView.cpp  ButtonView.h  ConstructionYardView.cpp  ConstructionYardView.h  DeadBuildingView.cpp  DeadBuildingView.h  DeadUnitView.cpp  DeadUnitView.h  GameView.cpp  GameView.h  HarvesterView.cpp  HarvesterView.h  HeavyFactoryView.cpp  HeavyFactoryView.h  HeavyInfantryView.cpp  HeavyInfantryView.h  HouseSelectionView.cpp  HouseSelectionView.h  LightFactoryView.cpp  LightFactoryView.h  LightInfantryView.cpp  LightInfantryView.h  MainMenuView.cpp  MainMenuView.h  (+59 more)
src/Weapons/: AssaultRifle.cpp  Cannon.cpp  Rocket.cpp  Rocket.h  RocketLauncher.cpp  SmallCannon.cpp  SmallCannon.h  Weapon.cpp  Weapon.h  rocket-launcher.cpp  rocket-launcher.h  small-cannon.cpp
static-image/: CMakeLists.txt
static-image/include/: Static.h
static-image/src/: Static.cpp  main.cpp
static-image/ui/: static.ui
(+328 files in other folders)
